LogOutput/manifests/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: europe-north1-docker.pkg.dev/dwk-gke-508706/dwk-repo/pingpong:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
