LogOutput/manifests/postgres-stateful.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: exercises
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        name: postgres
        volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
