LogOutput/manifests/reader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer-and-reader-app
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reader
  template:
    metadata:
      labels:
        app: reader
    spec:
      containers:
        - name: reader
          image: europe-north1-docker.pkg.dev/dwk-gke-508706/dwk-repo/reader:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            
          volumeMounts:
              - name: config-volume
                mountPath: /etc/config-volume
                readOnly: true
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config
