LogOutput/manifests/pingpong-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
