LogOutput/manifests/postgres-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: exercises
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      name: postgres
