LogOutput/manifests/reader-service.yaml


apiVersion: v1
kind: Service
metadata:
  name: reader-service
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: reader
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
