LogOutput/manifests/gateaway-and-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pingpong-gateway
  namespace: exercises
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pingpong-http-route
  namespace: exercises
spec:
  parentRefs:
    - name: pingpong-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      backendRefs:
        - name: pingpong-service
          port: 2345
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: reader-service
          port: 1234
