LogOutput/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reader-and-writer-ingress
spec:
  ingressClassName: traefik
  rules:
   - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reader-service
            port:
              number: 1234
